[gd_scene load_steps=9 format=3 uid="uid://cxnaar8r01bmv"]

[ext_resource type="Texture2D" uid="uid://rlsdrl53homd" path="res://items/beetle1.png" id="1_17cmk"]
[ext_resource type="Script" uid="uid://es3bg6ok2rnv" path="res://items/beetle.gd" id="1_pajmo"]
[ext_resource type="Texture2D" uid="uid://bbcfvwa73cxg4" path="res://items/beetle2.png" id="2_bvuwg"]
[ext_resource type="AudioStream" uid="uid://2nb6tycovwnp" path="res://audio/650750__tedoo__bee-in-a-mug.mp3" id="4_545dp"]
[ext_resource type="Script" uid="uid://dx8rc3wylygum" path="res://internal/race_synchronizer.gd" id="5_wa5nt"]

[sub_resource type="SpriteFrames" id="SpriteFrames_3dxge"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_17cmk")
}, {
"duration": 1.0,
"texture": ExtResource("2_bvuwg")
}],
"loop": true,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sbts0"]
radius = 59.0
height = 182.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_3vec0"]
properties/0/path = NodePath("BuzzSound:playing")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath("BuzzSound:volume_db")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath("AnimatedSprite2D:animation")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath(".:rotation")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:position")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath(".:modulate")
properties/5/spawn = true
properties/5/replication_mode = 2
properties/6/path = NodePath(".:z_index")
properties/6/spawn = true
properties/6/replication_mode = 2

[node name="Beetle" type="Area2D"]
rotation = -1.5708
scale = Vector2(0.4, 0.4)
script = ExtResource("1_pajmo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_3dxge")
offset = Vector2(-5, -40)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_sbts0")

[node name="BuzzSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_545dp")
volume_db = 20.0

[node name="FlyAway" type="Marker2D" parent="."]
position = Vector2(0, 300)

[node name="RaceSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_3vec0")
script = ExtResource("5_wa5nt")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
